Fixed flexbox margins in "Learn More" section to align with page

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ p {
 .navigation__list {
   display: flex;
   list-style: none;
+  }
 }
 
 .navigation__item {
@@ -199,14 +200,14 @@ p {
   display:flex;
   border: 2px solid #e4e4e4;
   padding: 15px;
-  margin: 10px;
+  margin-right: 10px;
 }
 
 .containerTwo {
   display:flex;
   border: 2px solid #e4e4e4;
   padding: 15px;
-  margin: 10px;
+  margin-left: 10px;
 }
 
 .article {
@@ -260,6 +261,23 @@ p {
 }
 
 /* Sidebar */
+
+.sideContainerOne {
+  border: 2px solid #e4e4e4;
+  padding: 15px;
+}
+
+.sideContainerTwo {
+  border: 2px solid #e4e4e4;
+  padding: 15px;
+}
+
+
+.sideContainerThree {
+  border: 2px solid #e4e4e4;
+  padding: 15px;
+}
+
 
 .sidebar {
   display: flex;
